--- a/index.html
+++ b/index.html
@@ -67,17 +67,33 @@
         </section>
         <!-- off home -->
 <!-- MOBILEEEE -->
+<!-- SOBRE -->
         <section id="sobre-bloco">
-            <div class="sobre-container">
+            <!-- ON SOBRE CONTEINER -->
+            <article class="sobre-container">
                 <h1>Quem Sou?</h1>
                 <div class="sobre-img">
                     <img src="" alt="">
                 </div>
-            </div>
+                <div class="sobre-txt">
+                    <p>Olá, meu nome é Italo Monteiro Silva, tenho 18 anos e e sou cearense. Atualmente Cursando Ciência da computação no Instituto Federal do Ceará. Trabalho com Desenvolvimento Web, Web Design e Desenvolvimento Front-End. Amo o que faço e pretendo evoluir cada vez mais! Estou disposto a aprender o que precisar para tornar seu projeto realidade!</p>
+                    <p>Meus interesses pessoais são games, basquete, música, instrumentos, animes, quadrinhos, heróis, Star Wars, Harry Potter... Bem nerd mesmo! kkkk</p>
+                    <div class="sobre-icons">
+                        <i class="fa-brands fa-gamepad-modern"></i>
+                        <i class="fa-brands fa-basketball"></i>
+                        <i class="fa-brands fa-music"></i>
+                        <i class="fa-brands fa-guitar-eletric"></i>
+                        <i class="fa-brands fa-bat"></i>
+                        <i class="fa-brands fa-user-bounty-hunter"></i>
+                    </div>
+                </div>
+            </article>
+            <!-- OFF SOBRE CONTEINER -->
         </section>
-
+<!-- SOBRE -->
     </main>
     <script src="menu-mobile.js"></script>
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     <script src="https://kit.fontawesome.com/0e7e103c72.js" crossorigin="anonymous"></script>
 </body>
 </html>
