--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </header>
 
     <main>
-        <!-- on home -->
+<!-- HOME -->
         <section id="home-bloco">
             <!-- on meio conteiner -->
             <div class="home-meio-conteiner">
@@ -48,7 +48,7 @@
                 <div class="home-meio-txt">
                     <!-- on conteudo txt -->
                     <div class="home-conteudo-txt">
-                        <h1>Olá,<br>Eu sou <strong class="destaque">Italo</strong></h1>
+                        <h1><strong class="destaque">Olá</strong>,<br>Seja Bem Vindo</h1>
                         <p>Neste ambiente você poderá conhecer um pouco de meu trabalho e também entrar em contato comigo. Estou ansioso para trabalhar-mos juntos!</p>
                     </div>
                     <!-- off conteudo txt -->
@@ -65,8 +65,8 @@
             </div>
             <!-- off meio conteiner -->
         </section>
-        <!-- off home -->
-<!-- MOBILEEEE -->
+<!-- HOME -->
+
 <!-- SOBRE -->
         <section id="sobre-bloco">
             <!-- ON SOBRE CONTEINER -->
@@ -91,6 +91,83 @@
             <!-- OFF SOBRE CONTEINER -->
         </section>
 <!-- SOBRE -->
+
+<!--  PROJETOS -->
+        <section id="projetos-bloco">
+            <!-- on projetos container -->
+            <div class="projetos-container">
+                <h1>Projetos</h1>
+                <!-- on projetos card 1 -->
+                <div class="projetos-card">
+                    <!-- on projetos conteudo -->
+                    <div class="projetos-conteudo">
+                        <div class="projetos-img">
+                            <img src="" alt="">
+                        </div>
+                        <!-- top img bottom txt -->
+                        <div class="projetos-txt">
+                            <h2>Projeto 1</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi cumque natus accusantium cupiditate, animi quidem nemo rem rerum earum eius tempora quis facilis provident consectetur culpa a, praesentium exercitationem ratione?</p>
+                        </div>
+                    </div>
+                    <!-- off projetos conteudo -->
+                </div>
+                <!-- off projetos card 1-->
+
+                <!-- on projetos card 2 -->
+                <div class="projetos-card">
+                    <!-- on projetos conteudo -->
+                    <div class="projetos-conteudo">
+                        <div class="projetos-img">
+                            <img src="" alt="">
+                        </div>
+                        <!-- top img bottom txt -->
+                        <div class="projetos-txt">
+                            <h2>Projeto 2</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi cumque natus accusantium cupiditate, animi quidem nemo rem rerum earum eius tempora quis facilis provident consectetur culpa a, praesentium exercitationem ratione?</p>
+                        </div>
+                    </div>
+                    <!-- off projetos conteudo -->
+                </div>
+                <!-- off projetos card 2-->
+
+                <!-- on projetos card 3 -->
+                <div class="projetos-card">
+                    <!-- on projetos conteudo -->
+                    <div class="projetos-conteudo">
+                        <div class="projetos-img">
+                            <img src="" alt="">
+                        </div>
+                        <!-- top img bottom txt -->
+                        <div class="projetos-txt">
+                            <h2>Projeto 3</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi cumque natus accusantium cupiditate, animi quidem nemo rem rerum earum eius tempora quis facilis provident consectetur culpa a, praesentium exercitationem ratione?</p>
+                        </div>
+                    </div>
+                    <!-- off projetos conteudo -->
+                </div>
+                <!-- off projetos card 3-->
+
+                <!-- on projetos card 4 -->
+                <div class="projetos-card">
+                    <!-- on projetos conteudo -->
+                    <div class="projetos-conteudo">
+                        <div class="projetos-img">
+                            <img src="" alt="">
+                        </div>
+                        <!-- top img bottom txt -->
+                        <div class="projetos-txt">
+                            <h2>Projeto 4</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi cumque natus accusantium cupiditate, animi quidem nemo rem rerum earum eius tempora quis facilis provident consectetur culpa a, praesentium exercitationem ratione?</p>
+                        </div>
+                    </div>
+                    <!-- off projetos conteudo -->
+                </div>
+                <!-- off projetos card 4-->
+            </div>
+            <!-- off projetos container -->
+        </section>
+<!-- PROJETOS -->
     </main>
     <script src="menu-mobile.js"></script>
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
