add projetos mobile

--- a/index.html
+++ b/index.html
@@ -96,11 +96,17 @@
         <section id="projetos-bloco">
             <!-- on projetos container -->
             <div class="projetos-container">
-                <h1>Projetos</h1>
-                <!-- on projetos card 1 -->
+                <div class="projetos-titulo">
+                    <h1>Projetos</h1>
+                </div>
+                <!-- on projetos card -->
                 <div class="projetos-card">
-                    <!-- on projetos conteudo -->
+                    <!-- on projetos conteudo 1 -->
                     <div class="projetos-conteudo">
+                        <div class="projetos-btn">
+                            <a href="#">Visualizar</a>
+                            <a href="#">Código</a>
+                        </div>
                         <div class="projetos-img">
                             <img src="" alt="">
                         </div>
@@ -110,14 +116,14 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi cumque natus accusantium cupiditate, animi quidem nemo rem rerum earum eius tempora quis facilis provident consectetur culpa a, praesentium exercitationem ratione?</p>
                         </div>
                     </div>
-                    <!-- off projetos conteudo -->
-                </div>
-                <!-- off projetos card 1-->
+                    <!-- off projetos conteudo1 -->
 
-                <!-- on projetos card 2 -->
-                <div class="projetos-card">
-                    <!-- on projetos conteudo -->
+                    <!-- on projetos conteudo 2-->
                     <div class="projetos-conteudo">
+                        <div class="projetos-btn">
+                            <a href="#">Visualizar</a>
+                            <a href="#">Código</a>
+                        </div>
                         <div class="projetos-img">
                             <img src="" alt="">
                         </div>
@@ -127,14 +133,14 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi cumque natus accusantium cupiditate, animi quidem nemo rem rerum earum eius tempora quis facilis provident consectetur culpa a, praesentium exercitationem ratione?</p>
                         </div>
                     </div>
-                    <!-- off projetos conteudo -->
-                </div>
-                <!-- off projetos card 2-->
+                    <!-- off projetos conteudo 2 -->
 
-                <!-- on projetos card 3 -->
-                <div class="projetos-card">
-                    <!-- on projetos conteudo -->
+                    <!-- on projetos conteudo 3-->
                     <div class="projetos-conteudo">
+                        <div class="projetos-btn">
+                            <a href="#">Visualizar</a>
+                            <a href="#">Código</a>
+                        </div>
                         <div class="projetos-img">
                             <img src="" alt="">
                         </div>
@@ -144,14 +150,14 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi cumque natus accusantium cupiditate, animi quidem nemo rem rerum earum eius tempora quis facilis provident consectetur culpa a, praesentium exercitationem ratione?</p>
                         </div>
                     </div>
-                    <!-- off projetos conteudo -->
-                </div>
-                <!-- off projetos card 3-->
+                    <!-- off projetos conteudo 3-->
 
-                <!-- on projetos card 4 -->
-                <div class="projetos-card">
-                    <!-- on projetos conteudo -->
+                    <!-- on projetos conteudo 4-->
                     <div class="projetos-conteudo">
+                        <div class="projetos-btn">
+                            <a href="#">Visualizar</a>
+                            <a href="#">Código</a>
+                        </div>
                         <div class="projetos-img">
                             <img src="" alt="">
                         </div>
@@ -161,9 +167,10 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi cumque natus accusantium cupiditate, animi quidem nemo rem rerum earum eius tempora quis facilis provident consectetur culpa a, praesentium exercitationem ratione?</p>
                         </div>
                     </div>
-                    <!-- off projetos conteudo -->
+                    <!-- off projetos conteudo 4-->
+                    
                 </div>
-                <!-- off projetos card 4-->
+                <!-- off projetos card-->
             </div>
             <!-- off projetos container -->
         </section>
