add projetos pc
adcionei o projetos para pc, coloquei fundos para representar imagens,ajustei uns detalhes

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                             <a href="#">Código</a>
                         </div>
                         <div class="projetos-img">
-                            <img src="" alt="">
+                            <p style="color: #2dd881;">Em Breve!!!</p>
                         </div>
                         <!-- top img bottom txt -->
                         <div class="projetos-txt">
@@ -125,7 +125,7 @@
                             <a href="#">Código</a>
                         </div>
                         <div class="projetos-img">
-                            <img src="" alt="">
+                            <p style="color: #2dd881;">Em Breve!!!</p>
                         </div>
                         <!-- top img bottom txt -->
                         <div class="projetos-txt">
@@ -142,7 +142,7 @@
                             <a href="#">Código</a>
                         </div>
                         <div class="projetos-img">
-                            <img src="" alt="">
+                            <p style="color: #2dd881;">Em Breve!!!</p>
                         </div>
                         <!-- top img bottom txt -->
                         <div class="projetos-txt">
@@ -159,7 +159,7 @@
                             <a href="#">Código</a>
                         </div>
                         <div class="projetos-img">
-                            <img src="" alt="">
+                            <p style="color: #2dd881;" >Em Breve!!!</p>
                         </div>
                         <!-- top img bottom txt -->
                         <div class="projetos-txt">
