print para perfil

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li><a href="#home-bloco">Home</a></li>
                 <li><a href="#sobre-bloco">Sobre</a></li>
                 <li><a href="#projetos-bloco">Projetos</a></li>
-                <li><a href="#contato">Contato</a></li>
+                <li><a href="#contato-bloco">Contato</a></li>
                 <li class="menu-icon"><a href=""><i class="fa-brands fa-github"></i></a><a href=""><i class="fa-brands fa-instagram"></i></a><a href=""><i class="fa-brands fa-whatsapp"></i></a></li>
             </ul>
             <!-- off menu lista -->
@@ -175,9 +175,73 @@
             <!-- off projetos container -->
         </section>
 <!-- PROJETOS -->
+
+<!-- CONTATO -->
+        <section id="contato-bloco">
+            <!-- on contato conteiner -->
+            <div class="contato-conteiner">
+                <!-- on contato left -->
+                <div class="contato-left">
+                    <!-- on contato txt -->
+                    <div class="contato-txt">
+                        <h1>Gostou do meu trabalho?<br>Contate-me através deste formulário<br>e vamos trabalhar juntos!</h1>
+                        <p>Ou se preferir, entre em contato através das redes sociais</p>
+                        <ul>
+                            <li><a href=""><i class="fa-brands fa-github"></i></a></li>
+                            <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+                            <li><a href=""><i class="fa-brands fa-whatsapp"></i></a></li>
+                        </ul>
+                    </div>
+                    <!-- off contato txt -->
+                    <!-- on contato img -->
+                    <div class="contato-img">
+                        <img src="" alt="">
+                    </div>
+                    <!-- off contato img -->
+                </div>
+                <!-- off contato left -->
+                <!-- on contato right -->
+                <div class="contato-right">
+                    <!-- on form card -->
+                    <div class="form-card">
+                        <a href="#home-bloco">Dev. <strong class="destaque">Italo</strong></a>
+                        <!-- on form -->
+                        <form action="" method="POST" autocomplete="on">
+                            <div class="campos-form">
+                                <label for="inome">Nome:</label>
+                                <input type="text" name="nome" id="inome" autocomplete="name" placeholder="Nome Completo" required>
+                            </div>
+                            <!-- up nome bot email -->
+                            <div class="campos-form">
+                                <label for="iemail">Email:</label>
+                                <input type="email" name="email" id="iemail" autocomplete="email" placeholder="exampleemail@exmpl.com" required>
+                            </div>
+                            <!-- up email bot msg -->
+                            <div class="campos-form">
+                                <label for="imsg">Mensagem:</label>
+                                <textarea name="msg" id="imsg" cols="30" rows="10" placeholder="Digite Sua Mensagem" required></textarea>
+                            </div>
+                            <!-- up msg bot button  -->
+                            <div class="btns-form">
+                                <button type="submit" value="enviarform">Enviar</button>
+                                <button type="reset" value="limparform">Limpar</button>
+                            </div>
+                        </form>
+                        <!-- off form -->
+                    </div>
+                    <!-- off form card -->
+                </div>
+                <!-- off contato right -->
+            </div>
+            <!-- off contato conteiner -->
+        </section>
+<!-- CONTATO -->
     </main>
+
+    <div class="logo" style=" display: flex; align-items: center; justify-content: center; text-align: center; background-color: #0D1F2D; height: 100vh; width: 100vw; color: #ffff;">
+        <h1>Dev. <strong style="color: #2dd881;">Italo</strong></h1>
+    </div>
     <script src="menu-mobile.js"></script>
-    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     <script src="https://kit.fontawesome.com/0e7e103c72.js" crossorigin="anonymous"></script>
 </body>
 </html>
