--- a/index.html
+++ b/index.html
@@ -191,13 +191,13 @@
                             <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
                             <li><a href=""><i class="fa-brands fa-whatsapp"></i></a></li>
                         </ul>
+                        <div class="contato-img">
+                            <img src="contato.png" alt="pessoa esperando contato">
+                            <a href="https://storyset.com/online">Online illustrations by Storyset</a>
+                        </div>
+    
                     </div>
                     <!-- off contato txt -->
-                    <!-- on contato img -->
-                    <div class="contato-img">
-                        <img src="" alt="">
-                    </div>
-                    <!-- off contato img -->
                 </div>
                 <!-- off contato left -->
                 <!-- on contato right -->
@@ -206,7 +206,7 @@
                     <div class="form-card">
                         <a href="#home-bloco">Dev. <strong class="destaque">Italo</strong></a>
                         <!-- on form -->
-                        <form action="" method="POST" autocomplete="on">
+                        <form action="https://api.staticforms.xyz/submit" method="POST" autocomplete="on">
                             <div class="campos-form">
                                 <label for="inome">Nome:</label>
                                 <input type="text" name="nome" id="inome" autocomplete="name" placeholder="Nome Completo" required>
@@ -219,12 +219,14 @@
                             <!-- up email bot msg -->
                             <div class="campos-form">
                                 <label for="imsg">Mensagem:</label>
-                                <textarea name="msg" id="imsg" cols="30" rows="10" placeholder="Digite Sua Mensagem" required></textarea>
+                                <textarea name="msg" id="imsg" cols="30" rows="5" placeholder="Digite Sua Mensagem" required></textarea>
                             </div>
                             <!-- up msg bot button  -->
                             <div class="btns-form">
                                 <button type="submit" value="enviarform">Enviar</button>
                                 <button type="reset" value="limparform">Limpar</button>
+                                <input type="hidden" name="accessKey" value="de2d6d9e-479a-4dd9-aad6-ecf00c44bb25">
+                                <input type="hidden" name="redirectTo" value="https://ialoitskrr.github.io/landing-page/obrigado.html">
                             </div>
                         </form>
                         <!-- off form -->
