--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <section id="sobre-bloco">
             <!-- ON SOBRE CONTEINER -->
             <article class="sobre-container">
-                <h1>Quem Sou?</h1>
+                <h1>Sobre Mim</h1>
                 <div class="sobre-img">
                     <img src="" alt="">
                 </div>
@@ -214,12 +214,12 @@
                             <!-- up nome bot email -->
                             <div class="campos-form">
                                 <label for="iemail">Email:</label>
-                                <input type="email" name="email" id="iemail" autocomplete="email" placeholder="exampleemail@exmpl.com" required>
+                                <input type="email" name="honeypot" id="iemail" autocomplete="email" placeholder="exampleemail@exmpl.com" required>
                             </div>
                             <!-- up email bot msg -->
                             <div class="campos-form">
                                 <label for="imsg">Mensagem:</label>
-                                <textarea name="msg" id="imsg" cols="30" rows="5" placeholder="Digite Sua Mensagem" required></textarea>
+                                <textarea name="message" id="imsg" cols="30" rows="5" placeholder="Digite Sua Mensagem" required></textarea>
                             </div>
                             <!-- up msg bot button  -->
                             <div class="btns-form">
