--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <section id="sobre-bloco">
             <!-- ON SOBRE CONTEINER -->
             <article class="sobre-container">
-                <h1>Sobre Mim</h1>
+                <h1>Quem Sou?</h1>
                 <div class="sobre-img">
                     <img src="" alt="">
                 </div>
@@ -209,12 +209,12 @@
                         <form action="https://api.staticforms.xyz/submit" method="POST" autocomplete="on">
                             <div class="campos-form">
                                 <label for="inome">Nome:</label>
-                                <input type="text" name="nome" id="inome" autocomplete="name" placeholder="Nome Completo" required>
+                                <input type="text" name="honeypot" id="inome" autocomplete="name" placeholder="Nome Completo" required>
                             </div>
                             <!-- up nome bot email -->
                             <div class="campos-form">
                                 <label for="iemail">Email:</label>
-                                <input type="email" name="honeypot" id="iemail" autocomplete="email" placeholder="exampleemail@exmpl.com" required>
+                                <input type="email" name="email" id="iemail" autocomplete="email" placeholder="exampleemail@exmpl.com" required>
                             </div>
                             <!-- up email bot msg -->
                             <div class="campos-form">
