--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                                 <button type="submit" value="enviarform">Enviar</button>
                                 <button type="reset" value="limparform">Limpar</button>
                                 <input type="hidden" name="accessKey" value="de2d6d9e-479a-4dd9-aad6-ecf00c44bb25">
-                                <input type="hidden" name="redirectTo" value="https://ialoitskrr.github.io/landing-page/obrigado.html">
+                                <input type="hidden" name="redirectTo" value="https://ialoitskrr.github.io/landing-page/obrigad.html">
                             </div>
                         </form>
                         <!-- off form -->
