--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
                 <li><a href="#projetos-bloco">Projetos</a></li>
                 <li><a href="#contato-bloco">Contato</a></li>
                 <li class="menu-icon">
-                    <a href=""><i class="fa-brands fa-github"></i></a><a href=""><i
-                            class="fa-brands fa-instagram"></i></a><a href=""><i class="fa-brands fa-whatsapp"></i></a>
+                    <a href="https://github.com/italomsilva"><i class="fa-brands fa-github"></i></a>
+                    <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="mailto:italoroyale13@gmail.com"><i class="fa fa-envelope-o"></i></a>
                 </li>
             </ul>
             <div class="menu-burguer">
@@ -64,19 +65,11 @@
                     <h1>Quem Sou?</h1>
                     <div class="sobre-txt">
                         <p>
-                            Olá, meu nome é Italo Monteiro Silva, atualmente curso Ciência da
-                            computação no Instituto Federal do Ceará. Sou Desenvolvedor. Amo o
-                            que faço e pretendo evoluir cada vez mais! Estou disposto a
-                            aprender o que precisar para tornar seu projeto realidade!
+                            Olá, meu nome é Italo Monteiro Silva e estou cursando Ciências da Computação no Instituto
+                            Federal do Ceará. Sou desenvolvedor apaixonado pelo que faço e estou sempre em busca de
+                            aprimorar minhas habilidades. Comprometido com a excelência, estou disposto a aprender e me
+                            adaptar conforme necessário para transformar seu projeto em realidade.
                         </p>
-                    </div>
-                </article>
-                <article class="sobre-article">
-                    <h1>Skills</h1>
-                    <div class="sobre-txt">
-                        <p>Front-end: Html, Css, JavaScript, TypeScript, React e Vue.</p>
-                        <p>Back-end: Node, JavaScript, TypeScript, MySql, Nest.</p>
-                        <p>Outras Skills: Git, Github, Clean Architecture.</p>
                     </div>
                 </article>
             </div>
@@ -88,20 +81,56 @@
                     <h1>Projetos</h1>
                 </div>
                 <div class="projetos-card">
-                    <div class="projetos-conteudo">
+                    <!-- project 1 -->
+                    <article class="projetos-conteudo">
                         <div class="projetos-txt">
                             <h2>Air Jordan 1</h2>
-                            <p>Este projeto é uma landing page dedicada ao icônico tênis Air Jordan 1. Desenvolvido inteiramente do zero, cada aspecto foi cuidadosamente criado, desde a seleção da paleta de cores, construção do layout, funcionalidades implementadas até as imagens utilizadas foram editadas manualmente, garantindo um visual exclusivo e profissional. Cada detalhe foi pensado para proporcionar uma experiência visual impactante e envolvente para os fãs do Air Jordan.</p>
+                            <p>
+                                Este projeto é uma landing page dedicada ao icônico tênis Air
+                                Jordan 1. Desenvolvido inteiramente do zero, cada aspecto foi
+                                cuidadosamente criado, desde a seleção da paleta de cores,
+                                construção do layout, funcionalidades implementadas até as
+                                imagens utilizadas foram editadas manualmente, garantindo um
+                                visual exclusivo e profissional. Cada detalhe foi pensado para
+                                proporcionar uma experiência visual impactante e envolvente
+                                para os fãs do Air Jordan.
+                            </p>
+                            <div class="conteiner-techs-project">
+                                <h3>Tecnologias utilizadas:</h3>
+                                <ul class="list-techs-project">
+                                    <li>
+                                        <img src="images/file_type_html_icon_130541.svg" alt="" />
+                                        <p>Html</p>
+                                    </li>
+                                    <li>
+                                        <img src="images/file_type_css_icon_130661.svg" alt="" />
+                                        <p>Css</p>
+                                    </li>
+                                    <li>
+                                        <img src="images/javascript_icon_130900.svg" alt="" />
+                                        <p>JavaScript</p>
+                                    </li>
+                                    <li>
+                                        <img src="images/react_original_logo_icon_146374.svg" alt="" />
+                                        <p>React</p>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                         <div class="projetos-img">
-                            <img src="images/AirJordanHome.png" alt="">
+                            <a href="https://italomsilva.github.io/AirJordan1/" target="_blank">
+                                <img src="images/AirJordanHome.png" alt="" />
+                            </a>
                         </div>
                         <div class="projetos-btn">
-                            <a href="https://italomsilva.github.io/AirJordan1/" target="_blank">Visualizar</a>
+                            <a href="https://italomsilva.github.io/AirJordan1/" target="_blank">
+                                Visualizar
+                            </a>
                             <a href="https://github.com/italomsilva/AirJordan1" target="_blank">Código</a>
                         </div>
-                    </div>
-                    <div class="projetos-conteudo">
+                    </article>
+                    <!-- project2 -->
+                    <article class="projetos-conteudo">
                         <div class="projetos-txt">
                             <h2>Projeto 2</h2>
                             <p>
@@ -118,8 +147,9 @@
                             <a href="#">Visualizar</a>
                             <a href="#">Código</a>
                         </div>
-                    </div>
-                    <div class="projetos-conteudo">
+                    </article>
+                    <!-- project 3 -->
+                    <article class="projetos-conteudo">
                         <div class="projetos-txt">
                             <h2>Projeto 3</h2>
                             <p>
@@ -136,8 +166,9 @@
                             <a href="#">Visualizar</a>
                             <a href="#">Código</a>
                         </div>
-                    </div>
-                    <div class="projetos-conteudo">
+                    </article>
+                    <!-- project 4 -->
+                    <article class="projetos-conteudo">
                         <div class="projetos-txt">
                             <h2>Projeto 4</h2>
                             <p>
@@ -154,7 +185,7 @@
                             <a href="#">Visualizar</a>
                             <a href="#">Código</a>
                         </div>
-                    </div>
+                    </article>
                 </div>
             </div>
         </section>
@@ -187,7 +218,7 @@
                 <div class="contato-right">
                     <div class="form-card">
                         <a href="#home-bloco">Dev. <strong class="destaque">Italo</strong></a>
-                        <form action="https://api.staticforms.xyz/submit" method="POST" autocomplete="on">
+                        <form onsubmit="return sendEmail()" action="obrigado.html" autocomplete="on">
                             <div class="campos-form">
                                 <label for="inome">Nome:</label>
                                 <input type="text" name="honeypot" id="inome" autocomplete="name"
@@ -204,11 +235,8 @@
                                     required></textarea>
                             </div>
                             <div class="btns-form">
-                                <button type="submit" value="enviarform">Enviar</button>
+                                <button type="submit" value="enviarform" id="isubmit">Enviar</button>
                                 <button type="reset" value="limparform">Limpar</button>
-                                <input type="hidden" name="accessKey" value="b5c22b7a-8ccd-463d-8368-ff99a7b6e01b" />
-                                <input type="hidden" name="redirectTo"
-                                    value="https://ialoitskrr.github.io/landing-page/obrigad.html" />
                             </div>
                         </form>
                     </div>
@@ -217,6 +245,7 @@
         </section>
     </main>
     <script src="scripts/menu-mobile.js"></script>
+    <script src="scripts/sendEmail.js"></script>
     <script src="https://kit.fontawesome.com/0e7e103c72.js" crossorigin="anonymous"></script>
 </body>
 
