--- a/obrigado.html
+++ b/obrigado.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <h1>Obrigado pelo Contato, <br>Sua mensagem foi enviada</h1>
-        <p><a href="#index.html">voltar</a></p>
+        <p><a href="index.html">voltar</a></p>
     </main>
 </body>
 </html>
