--- a/index.html
+++ b/index.html
@@ -71,7 +71,49 @@
                             adaptar conforme necessário para transformar seu projeto em realidade.
                         </p>
                     </div>
-                </article>
+                </article>  
+                <aside class="about-skills">
+                    <h1>Skills</h1>
+                    <ul class="about-skills-list">
+                        <li>
+                            <img src="images/file_type_html_icon_130541.svg" alt="">
+                            <p>Html</p>
+                        </li>
+                        <li>
+                            <img src="images/file_type_css_icon_130661.svg" alt="">
+                            <p>Css</p>
+                        </li>
+                        <li>
+                            <img src="images/javascript_icon_130900.svg" alt="">
+                            <p>JavaScript</p>
+                        </li>
+                        <li>
+                            <img src="images/file_type_typescript_official_icon_130107.png" alt="">
+                            <p>Typescript</p>
+                        </li>
+                        <li>
+                            <img src="images/file_type_node_icon_130301.svg" alt="">
+                            <p>Node</p>
+                        </li>
+                        <li>
+                            <img src="images/react_original_logo_icon_146374.svg" alt="">
+                            <p>React</p>
+                        </li>
+                        <li>
+                            <img src="images/logo-small-gradient.76616405.svg" alt="">
+                            <p>Nest</p>
+                        </li>
+                        <li>
+                            <img src="images/mysql_original_wordmark_logo_icon_146417.svg" alt="">
+                            <p>MySql</p>
+                        </li>
+                        <li>
+                            <img src="images/file_type_git_icon_130581.svg" alt="">
+                            <p>Git</p>
+                        </li>
+                    </ul>
+                    <p><span><a href="https://icon-icons.com/">Icones acessados em icon-icons.com</a></span></p>
+                </aside>  
             </div>
         </section>
         <!-- Projects -->
