--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             adaptar conforme necessário para transformar seu projeto em realidade.
                         </p>
                     </div>
-                </article>  
+                </article>
                 <aside class="about-skills">
                     <h1>Skills</h1>
                     <ul class="about-skills-list">
@@ -113,7 +113,7 @@
                         </li>
                     </ul>
                     <p><span><a href="https://icon-icons.com/">Icones acessados em icon-icons.com</a></span></p>
-                </aside>  
+                </aside>
             </div>
         </section>
         <!-- Projects -->
@@ -242,13 +242,13 @@
                         <p>Ou se preferir, entre em contato através das redes sociais</p>
                         <ul>
                             <li>
-                                <a href=""><i class="fa-brands fa-github"></i></a>
+                                <a href="https://github.com/italomsilva"><i class="fa-brands fa-github"></i></a>
                             </li>
                             <li>
-                                <a href=""><i class="fa-brands fa-instagram"></i></a>
+                                <a href=""><i class="fa-brands fa-linkedin"></i></a>
                             </li>
                             <li>
-                                <a href=""><i class="fa-brands fa-whatsapp"></i></a>
+                                <a href="mailto:italoroyale13@gmail.com"><i class="fa fa-envelope-o"></i></a>
                             </li>
                         </ul>
                         <div class="contato-img">
