--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li><a href="#contato-bloco">Contato</a></li>
                 <li class="menu-icon">
                     <a href="https://github.com/italomsilva"><i class="fa-brands fa-github"></i></a>
-                    <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/italo-monteiro-905273296/"><i class="fa-brands fa-linkedin"></i></a>
                     <a href="mailto:italoroyale13@gmail.com"><i class="fa fa-envelope-o"></i></a>
                 </li>
             </ul>
@@ -245,7 +245,7 @@
                                 <a href="https://github.com/italomsilva"><i class="fa-brands fa-github"></i></a>
                             </li>
                             <li>
-                                <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                                <a href="https://www.linkedin.com/in/italo-monteiro-905273296/"><i class="fa-brands fa-linkedin"></i></a>
                             </li>
                             <li>
                                 <a href="mailto:italoroyale13@gmail.com"><i class="fa fa-envelope-o"></i></a>
