--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li class="menu-icon">
                     <a href="https://github.com/italomsilva"><i class="fa-brands fa-github"></i></a>
                     <a href="https://www.linkedin.com/in/italo-monteiro-905273296/"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="mailto:italoroyale13@gmail.com"><i class="fa fa-envelope-o"></i></a>
+                    <a href="mailto:dev.italoms@gmail.com"><i class="fa fa-envelope-o"></i></a>
                 </li>
             </ul>
             <div class="menu-burguer">
@@ -248,7 +248,7 @@
                                 <a href="https://www.linkedin.com/in/italo-monteiro-905273296/"><i class="fa-brands fa-linkedin"></i></a>
                             </li>
                             <li>
-                                <a href="mailto:italoroyale13@gmail.com"><i class="fa fa-envelope-o"></i></a>
+                                <a href="mailto:dev.italoms@gmail.com"><i class="fa fa-envelope-o"></i></a>
                             </li>
                         </ul>
                         <div class="contato-img">
